--- a/Caddyfile
+++ b/Caddyfile
@@ -21,9 +21,9 @@
 }
 
 # Ollama API
-{$OLLAMA_HOSTNAME} {
-    reverse_proxy localhost:11434
-}
+# {$OLLAMA_HOSTNAME} {
+#     reverse_proxy localhost:11434
+# }
 
 # Supabase
 {$SUPABASE_HOSTNAME} {
@@ -33,7 +33,7 @@
 # SearXNG
 {$SEARXNG_HOSTNAME} {
     encode zstd gzip
-    
+
     @api {
         path /config
         path /healthz
@@ -49,7 +49,7 @@
     @static {
         path /static/*
     }
-    
+
     header {
         # CSP (https://content-security-policy.com)
         Content-Security-Policy "upgrade-insecure-requests; default-src 'none'; script-src 'self'; style-src 'self' 'unsafe-inline'; form-action 'self' https://github.com/searxng/searxng/issues/new; font-src 'self'; frame-ancestors 'self'; base-uri 'self'; connect-src 'self' https://overpass-api.de; img-src * data:; frame-src https://www.youtube-nocookie.com https://player.vimeo.com https://www.dailymotion.com https://www.deezer.com https://www.mixcloud.com https://w.soundcloud.com https://embed.spotify.com;"
@@ -66,12 +66,12 @@
         # Remove "Server" header
         -Server
     }
-    
+
     header @api {
         Access-Control-Allow-Methods "GET, OPTIONS"
         Access-Control-Allow-Origin "*"
     }
-    
+
     route {
         # Cache policy
         header Cache-Control "max-age=0, no-store"
@@ -79,7 +79,7 @@
         header @imageproxy Cache-Control "max-age=604800, public"
         header @static Cache-Control "max-age=31536000, public, immutable"
     }
-    
+
     # SearXNG (uWSGI)
     reverse_proxy localhost:8080 {
         header_up X-Forwarded-Port {http.request.port}
